--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "axios": "^0.21.0",
     "cassandra-driver": "^4.6.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
