--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express-session": "^1.17.1",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
+    "pdfkit": "^0.11.0",
     "pug": "2.0.0-beta11"
   }
 }
